Enhanced code and reserched on how to achive greater than 16 digit precesion

--- a/square-root-of-two.ipynb
+++ b/square-root-of-two.ipynb
@@ -5,21 +5,19 @@
    "metadata": {},
    "source": [
     "## Tasks\n",
-    "This my proposed solution to the given assessment. The code should not depend on any code from the standard library or otherwise. The author is Anthony Moore (G00170900@gmit.ie)\n",
+    "This my proposed solution to the given assessment. The objective is to calculate the square root of 2 to within 100 decimal places. The code provided should not depend on any code from the standard library or otherwise, with the exception of validating the results for comparison.\n",
+    "\n",
+    "The author is Anthony Moore (G00170900@gmit.ie)\n",
     "***\n",
     "#### Task: Calculate the square root of 2 to 100 decimal places.\n",
     "***\n",
-    "We can calculate the the square root og a number using Newtons Method [1,2] to find the square root of $z$ of a number $x$, we can iterate using the following formula.\n",
+    "We can calculate the the square root of a number using Newtons Method [1,2] to find the square root of $z$ of a number $x$, we can iterate using the following formula.\n",
     "\n",
     "$$ z_{zext} = z - \\frac{z^2 -x} {2z} $$\n",
     "\n",
     "[1] A Tour of Go - Exercise: Loops and Functions https://tour.golang.org/flowcontrol/8\n",
     "\n",
-    "[2] Wolfram MathWorld - Newton's Method https://mathworld.wolfram.com/NewtonsMethod.html\n",
-    "\n",
-    "[3] SAS Blogs - The Babylonian method for finding square roots by hand https://blogs.sas.com/content/iml/2016/05/16/babylonian-square-roots.html\n",
-    "\n",
-    "[4] geeksforgeeks - Find root of a number using Newton’s method https://www.geeksforgeeks.org/find-root-of-a-number-using-newtons-method/#:~:text=Let%20N%20be%20any%20number,correct%20square%20root%20of%20N.\n"
+    "[2] Wolfram MathWorld - Newton's Method https://mathworld.wolfram.com/NewtonsMethod.html\n"
    ]
   },
   {
@@ -28,14 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sqrt2(x):\n",
+    "def sqrtNum(x):\n",
     "    \"\"\"\n",
     "    A function to calculate the square root of a number x\n",
     "    \"\"\"\n",
     "    # Initial estimate for the square root of z\n",
     "    z = x / 2\n",
     "    # loop until we are happy with the level of precision\n",
-    "    while abs(x - (z * z)) > 0.0001:\n",
+    "    while abs(x - (z * z)) > 0.00000001:\n",
     "        # calculate a better guess for the square root on the next iteration\n",
     "        z -= (z * z - x) / (2 * z)\n",
     "    # return the (approximate) square root of x\n",
@@ -60,7 +58,7 @@
    ],
    "source": [
     "# Test the function on 100\n",
-    "sqrt2(100)"
+    "sqrtNum(100)"
    ]
   },
   {
@@ -71,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "1.4142156862745099"
+       "1.4142135623746899"
       ]
      },
      "execution_count": 3,
@@ -80,14 +78,16 @@
     }
    ],
    "source": [
-    "# Test the function of 2\n",
-    "sqrt2(2)"
+    "# Test the function on 2\n",
+    "sqrtNum(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -101,9 +101,53 @@
     }
    ],
    "source": [
-    "# Use math library to validate result\n",
+    "# Use math library to validate our result\n",
     "import math\n",
     "math.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Enhancements 1\n",
+    "***\n",
+    "Building upon our basic algorithm we must now investigate how to achieve an accurate result to within 100 decimal places. The first milestone, we must overcome is the limitation of how a programming languages typically handle floating point numbers. In most languages floats are typically 32bits in size with a precision of 24bits which equates to 7 decimal places. Doubles are typically 64bits in size with a precession of 53bits which equates to 16 decimal places [3,4]\n",
+    "\n",
+    "[3] IEEE 754: floating point in modern computers https://en.wikipedia.org/wiki/Floating-point_arithmetic#IEEE_754:_floating_point_in_modern_computers\n",
+    "\n",
+    "[4] Floating Point Arithmetic: Issues and Limitations: https://docs.python.org/3/tutorial/floatingpoint.html\n",
+    "\n",
+    "One approach to this solution could potentially be to try and represent the value as a string. Since a string is essentially a character array with no maximum limit. Its only real limitation on a 64bit operating system would be the amount of random access memory (RAM) that is physically installed on the machine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623746898698271934335934929549694061279296875000000000000000000000000000000000000000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attempt to calculate to 100 decimal places using string format\n",
+    "result = format(sqrtNum(2),',.100f')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Observation:\n",
+    "It would seem that using a string did infact generate 100 decimal places. However, it appears to have stopped calculating after 53 decimal digits. This would also seem to confirm how floating point numbers are stored on modern computers as per the referenced python documentation. \n",
+    "\n",
+    "\"On most machines today, floats are approximated using a binary fraction with the numerator using the first 53 bits starting with the most significant bit and with the denominator as a power of two. In the case of 1/10, the binary fraction is 3602879701896397 / 2 ** 55 which is close to but not exactly equal to the true value of 1/10.\"\n"
    ]
   }
  ],
