--- a/square-root-of-two.ipynb
+++ b/square-root-of-two.ipynb
@@ -114,11 +114,11 @@
     "***\n",
     "Building upon our basic algorithm we must now investigate how to achieve an accurate result to within 100 decimal places. The first milestone, we must overcome is the limitation of how a programming languages typically handle floating point numbers. In most languages floats are typically 32bits in size with a precision of 24bits which equates to 7 decimal places. Doubles are typically 64bits in size with a precession of 53bits which equates to 16 decimal places [3,4]\n",
     "\n",
+    "One approach to this solution could potentially be to try and represent the value as a string. Since a string is essentially a character array with no maximum limit. Its only real limitation on a 64bit operating system would be the amount of random access memory (RAM) that is physically installed on the machine.\n",
+    "\n",
     "[3] IEEE 754: floating point in modern computers https://en.wikipedia.org/wiki/Floating-point_arithmetic#IEEE_754:_floating_point_in_modern_computers\n",
     "\n",
-    "[4] Floating Point Arithmetic: Issues and Limitations: https://docs.python.org/3/tutorial/floatingpoint.html\n",
-    "\n",
-    "One approach to this solution could potentially be to try and represent the value as a string. Since a string is essentially a character array with no maximum limit. Its only real limitation on a 64bit operating system would be the amount of random access memory (RAM) that is physically installed on the machine."
+    "[4] Floating Point Arithmetic: Issues and Limitations: https://docs.python.org/3/tutorial/floatingpoint.html\n"
    ]
   },
   {
@@ -145,10 +145,75 @@
    "metadata": {},
    "source": [
     "#### Observation:\n",
-    "It would seem that using a string did infact generate 100 decimal places. However, it appears to have stopped calculating after 53 decimal digits. This would also seem to confirm how floating point numbers are stored on modern computers as per the referenced python documentation. \n",
+    "It would seem that using a string did infact generate 100 decimal places. However, it appears to have stopped calculating after 53 decimal digits. This would also seem to confirm how floating point numbers are stored on modern computers as binary fractions, as per the referenced python documentation. \n",
     "\n",
     "\"On most machines today, floats are approximated using a binary fraction with the numerator using the first 53 bits starting with the most significant bit and with the denominator as a power of two. In the case of 1/10, the binary fraction is 3602879701896397 / 2 ** 55 which is close to but not exactly equal to the true value of 1/10.\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Enhancements 2\n",
+    "***\n",
+    "Given the limitations of floating-point numbers and my plan to use a string coming up short. I started to think of other ways to hold large numerical values. The obvious one that can to mind was an integer as this could hold 2^64. Initially I felt that this would be a limitation and that I would probably need to import the math library to unbind this figure. However, I was presently surprised to find that this built in feature with the Python3 standard library [5].\n",
+    "\n",
+    "I then looked into how to create very large integer values (unbounded) by using the exponentiation operator $**$ and dividing into whole numbers using the floored quotient operator $//$ to avoid returning any floating point numbers [6].\n",
+    "\n",
+    "[5] Integers https://docs.python.org/3/whatsnew/3.0.html#integers\n",
+    "\n",
+    "[6] Numeric Types https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqrt(2) : 1.4142135623730950488016887242096980785696718753769480731766797379907324784621070388503875343276415727\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sqrt2(inputNum):\n",
+    "    \"\"\"\n",
+    "    A function to calculate the square root of a number using large interger values.\n",
+    "    \"\"\"\n",
+    "    # multiply input by our exponentiation multiplier (makes large int values)\n",
+    "    multiplyer = 1 * 10 ** 200\n",
+    "    inputNum *= multiplyer\n",
+    "\n",
+    "    # level of precision\n",
+    "    precision = 0.0001\n",
+    "\n",
+    "    # make x a copy of the large inputNum\n",
+    "    x = inputNum\n",
+    "\n",
+    "    # make an initial guess (divide with floored quotient)\n",
+    "    z =  x // 2\n",
+    "\n",
+    "    # loop until we reach the required precision\n",
+    "    while abs((x - z) > precision):\n",
+    "        # calculate a better guess for the square root\n",
+    "        x = (x + z) // 2\n",
+    "        z = inputNum // x\n",
+    "\n",
+    "    return x\n",
+    "\n",
+    "# output result\n",
+    "print(f'sqrt(2) : {sqrt2(2) // 10**100}.{sqrt2(2) % 10**100 :100d}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
