fixed up print formatting using a list, imported Decimal to validate result

--- a/square-root-of-two.ipynb
+++ b/square-root-of-two.ipynb
@@ -156,42 +156,37 @@
    "source": [
     "#### Enhancements 2\n",
     "***\n",
-    "Given the limitations of floating-point numbers and my plan to use a string coming up short. I started to think of other ways to hold large numerical values. The obvious one that can to mind was an integer as this could hold 2^64. Initially I felt that this would be a limitation and that I would probably need to import the math library to unbind this figure. However, I was presently surprised to find that this built in feature with the Python3 standard library [5].\n",
+    "Given the limitations of floating-point numbers and my plan to use a string coming up short. I started to think of other ways to hold large numerical values. The obvious one that can to mind was an integer as this could hold 2^64. Initially I felt that this would be a limitation and that I would probably need to import the math library to unbind this figure. However, I was presently surprised to find that this is a built in feature with the Python3 standard library [5].\n",
     "\n",
     "I then looked into how to create very large integer values (unbounded) by using the exponentiation operator $**$ and dividing into whole numbers using the floored quotient operator $//$ to avoid returning any floating point numbers [6].\n",
     "\n",
+    "To format my large integer back into a float with 100 decimal places. I first converted the integer into a list, then inserted a decimal place after the first digit. I Then converted the list back into a formatted string and printed the result [7].\n",
+    "\n",
     "[5] Integers https://docs.python.org/3/whatsnew/3.0.html#integers\n",
     "\n",
-    "[6] Numeric Types https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex"
+    "[6] Numeric Types https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex\n",
+    "\n",
+    "[7] Convert number to list of integers https://www.geeksforgeeks.org/python-convert-number-to-list-of-integers/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sqrt(2) : 1.4142135623730950488016887242096980785696718753769480731766797379907324784621070388503875343276415727\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def sqrt2(inputNum):\n",
+    "def sqrt2():\n",
     "    \"\"\"\n",
-    "    A function to calculate the square root of a number using large interger values.\n",
+    "    A function to calculate the square root of 2 number using large interger values.\n",
     "    \"\"\"\n",
-    "    # multiply input by our exponentiation multiplier (makes large int values)\n",
-    "    multiplyer = 1 * 10 ** 200\n",
-    "    inputNum *= multiplyer\n",
+    "    # exponentiation multiplier (makes large int values)\n",
+    "    multiplier = 2 * 10 ** 200\n",
     "\n",
     "    # level of precision\n",
     "    precision = 0.0001\n",
     "\n",
-    "    # make x a copy of the large inputNum\n",
-    "    x = inputNum\n",
+    "    # make x a copy of the large integer\n",
+    "    x = multiplier\n",
     "\n",
     "    # make an initial guess (divide with floored quotient)\n",
     "    z =  x // 2\n",
@@ -200,20 +195,60 @@
     "    while abs((x - z) > precision):\n",
     "        # calculate a better guess for the square root\n",
     "        x = (x + z) // 2\n",
-    "        z = inputNum // x\n",
+    "        z = multiplier // x\n",
+    "    \n",
+    "    # using list comprehension \n",
+    "    # convert whole number to list of integers \n",
+    "    listResults = [int(elem) for elem in str(x)] \n",
     "\n",
-    "    return x\n",
+    "    # insert decimal point after the first digit in the list\n",
+    "    listResults.insert(1, '.')\n",
+    "    \n",
+    "    # using list comprehension \n",
+    "    # convert list back to a string \n",
+    "    listToStr = ''.join([str(elem) for elem in listResults])\n",
     "\n",
-    "# output result\n",
-    "print(f'sqrt(2) : {sqrt2(2) // 10**100}.{sqrt2(2) % 10**100 :100d}')\n"
+    "    # return result\n",
+    "    return (listToStr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730950488016887242096980785696718753769480731766797379907324784621070388503875343276415727\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test sqrt2 function\n",
+    "print(sqrt2())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730950488016887242096980785696718753769480731766797379907324784621070388503875343276415727\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import Decimal library to validate result\n",
+    "from decimal import *\n",
+    "getcontext().prec=101\n",
+    "print(Decimal(\"2\").sqrt())"
+   ]
   }
  ],
  "metadata": {
