added np.std() and manual implementation

--- a/standard-deviation-excel.ipynb
+++ b/standard-deviation-excel.ipynb
@@ -37,6 +37,145 @@
     "\n",
     "[4] Standard Deviation and Variance - https://www.mathsisfun.com/data/standard-deviation.html\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Application of numpy\n",
+    "\n",
+    "*numpy.std*(arr, axis = None) : Compute the standard deviation of the given data (array elements) along the specified axis[5].\n",
+    "\n",
+    "**Standard Deviation** (SD) is measured as the spread of data distribution in the given data set[6].\n",
+    "\n",
+    "[5] Numpy Docs -https://numpy.org/doc/stable/reference/generated/numpy.std.html#:~:text=The%20standard%20deviation%20is%20the,N%20%3D%20len(x)%20.\n",
+    "\n",
+    "[6] numpy.std() in Python - https://www.geeksforgeeks.org/numpy-std-in-python/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop :  [20, 2, 7, 1, 34]\n",
+      "std of pop :  12.576167937809991\n",
+      "\n",
+      "More precision with float32\n",
+      "std of pop :  12.576168\n",
+      "\n",
+      "More accuracy with float64\n",
+      "std of pop :  12.576167937809991\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python Program illustrating STDEV.P\n",
+    "# numpy.std() method  \n",
+    "import numpy as np\n",
+    "    \n",
+    "# 1D array  \n",
+    "pop = [20, 2, 7, 1, 34] \n",
+    "  \n",
+    "print(\"pop : \", pop)  \n",
+    "print(\"std of pop : \", np.std(pop)) \n",
+    "  \n",
+    "print (\"\\nMore precision with float32\") \n",
+    "print(\"std of pop : \", np.std(pop, dtype = np.float32)) \n",
+    "  \n",
+    "print (\"\\nMore accuracy with float64\") \n",
+    "print(\"std of pop : \", np.std(pop, dtype = np.float64)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop :  [20, 2, 7]\n",
+      "std of pop :  7.586537784494028\n",
+      "\n",
+      "More precision with float32\n",
+      "std of pop :  7.586538\n",
+      "\n",
+      "More accuracy with float64\n",
+      "std of pop :  7.586537784494028\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python Program illustrating STDEV.S\n",
+    "# numpy.std() method  \n",
+    "# Remove the last 2 index from the arry, so it is a sample population of 3/5\n",
+    "# 1D array  \n",
+    "pop = [20, 2, 7] \n",
+    "\n",
+    "print(\"pop : \", pop)  \n",
+    "print(\"std of pop : \", np.std(pop))\n",
+    "  \n",
+    "print (\"\\nMore precision with float32\") \n",
+    "print(\"std of pop : \", np.std(pop, dtype = np.float32))\n",
+    "  \n",
+    "print (\"\\nMore accuracy with float64\") \n",
+    "print(\"std of pop : \", np.std(pop, dtype = np.float64))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.576167937809991"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Manual implementation STDEV.P\n",
+    "# define array\n",
+    "arr = [20, 2, 7, 1, 34] \n",
+    "\n",
+    "## get std dev\n",
+    "np.sqrt(np.sum((arr - np.mean(arr))**2)/len(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.520342781785652"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Manual implementation STDEV.S\n",
+    "# Remove the last 2 index from the arry, so it is a sample population of 3/5\n",
+    "# 1D array  \n",
+    "arr = [20, 2, 7] \n",
+    "np.sqrt(np.sum((arr - np.mean(arr))**2)/len(arr) - 1)"
+   ]
   }
  ],
  "metadata": {
