--- a/standard-deviation-excel.ipynb
+++ b/standard-deviation-excel.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tasks\n",
-    "This my proposed solution to the given assessment. The objective is to research the two different implementations of the standard deviation function used by mircosoft excel libary and highlight the differences between them. These functions are **STDEV.P** and **STDEV.S** respeciievly. Then use **numpy** to perform a simulation demonstrating that the **STDEV.S** calculation is a better estimate for the standard deviation of a population when performed on a sample."
+    "This my proposed solution to the given assessment. The objective is to research the two different implementations of the standard deviation function used by mircosoft excel libary and highlight the differences between them. These functions are *STDEV.P* and *STDEV.S* respeciievly. Then use **numpy** to perform a simulation demonstrating that the *STDEV.S* calculation is a better estimate for the standard deviation of a population when performed on a sample."
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Application of numpy\n",
+    "## Application of numpy.std() for baseline testing\n",
     "\n",
     "*numpy.std*(arr, axis = None) : Compute the standard deviation of the given data (array elements) along the specified axis[5].\n",
     "\n",
@@ -63,32 +63,21 @@
      "output_type": "stream",
      "text": [
       "pop :  [20, 2, 7, 1, 34]\n",
-      "std of pop :  12.576167937809991\n",
-      "\n",
-      "More precision with float32\n",
-      "std of pop :  12.576168\n",
-      "\n",
-      "More accuracy with float64\n",
       "std of pop :  12.576167937809991\n"
      ]
     }
    ],
    "source": [
     "# Python Program illustrating STDEV.P\n",
-    "# numpy.std() method  \n",
+    "# using numpy.std() method  \n",
     "import numpy as np\n",
     "    \n",
-    "# 1D array  \n",
+    "# population array  \n",
     "pop = [20, 2, 7, 1, 34] \n",
-    "  \n",
+    "\n",
+    "## get std dev  \n",
     "print(\"pop : \", pop)  \n",
-    "print(\"std of pop : \", np.std(pop)) \n",
-    "  \n",
-    "print (\"\\nMore precision with float32\") \n",
-    "print(\"std of pop : \", np.std(pop, dtype = np.float32)) \n",
-    "  \n",
-    "print (\"\\nMore accuracy with float64\") \n",
-    "print(\"std of pop : \", np.std(pop, dtype = np.float64)) "
+    "print(\"std of pop : \", np.std(pop))  "
    ]
   },
   {
@@ -100,32 +89,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pop :  [20, 2, 7]\n",
-      "std of pop :  7.586537784494028\n",
-      "\n",
-      "More precision with float32\n",
-      "std of pop :  7.586538\n",
-      "\n",
-      "More accuracy with float64\n",
-      "std of pop :  7.586537784494028\n"
+      "sample :  [20, 2, 7]\n",
+      "std of sample :  9.291573243177568\n"
      ]
     }
    ],
    "source": [
     "# Python Program illustrating STDEV.S\n",
     "# numpy.std() method  \n",
-    "# Remove the last 2 index from the arry, so it is a sample population of 3/5\n",
-    "# 1D array  \n",
-    "pop = [20, 2, 7] \n",
     "\n",
-    "print(\"pop : \", pop)  \n",
-    "print(\"std of pop : \", np.std(pop))\n",
-    "  \n",
-    "print (\"\\nMore precision with float32\") \n",
-    "print(\"std of pop : \", np.std(pop, dtype = np.float32))\n",
-    "  \n",
-    "print (\"\\nMore accuracy with float64\") \n",
-    "print(\"std of pop : \", np.std(pop, dtype = np.float64))"
+    "# Remove the last 2 index from the array, so it is a sample population of 3/5 \n",
+    "sample = [20, 2, 7] \n",
+    "\n",
+    "## get std dev\n",
+    "print(\"sample : \", sample)  \n",
+    "print(\"std of sample : \", np.std(sample, ddof=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Application of formula for result validation\n",
+    "#### STDEV.P = *np.sqrt(np.sum((x - np.mean(x))**2)/len(x))* \n",
+    "#### STDEV.S = *np.sqrt(np.sum((x - np.mean(x))**2)/(len(x)-1))"
    ]
   },
   {
@@ -134,23 +121,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12.576167937809991"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop :  [20, 2, 7, 1, 34]\n",
+      "std of pop :  12.576167937809991\n"
+     ]
     }
    ],
    "source": [
-    "# Manual implementation STDEV.P\n",
-    "# define array\n",
-    "arr = [20, 2, 7, 1, 34] \n",
+    "# formula implementation STDEV.P\n",
+    "# population array\n",
+    "pop = [20, 2, 7, 1, 34] \n",
     "\n",
     "## get std dev\n",
-    "np.sqrt(np.sum((arr - np.mean(arr))**2)/len(arr))"
+    "print(\"pop : \", pop)\n",
+    "print(\"std of pop : \", np.sqrt(np.sum((pop - np.mean(pop))**2)/len(pop)))"
    ]
   },
   {
@@ -159,22 +145,136 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7.520342781785652"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample :  [20, 2, 7]\n",
+      "std of sample :  9.291573243177568\n"
+     ]
     }
    ],
    "source": [
-    "# Manual implementation STDEV.S\n",
+    "# formula implementation STDEV.S\n",
+    "# Remove the last 2 index from the arry, so it is a sample population of 3/5 \n",
+    "sample = [20, 2, 7] \n",
+    "\n",
+    "## get std dev\n",
+    "print(\"sample : \", sample)\n",
+    "print(\"std of sample : \", np.sqrt(np.sum((sample - np.mean(sample))**2)/(len(sample) -1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulation to prove STDEV.S is a better estimate for the standard deviation when performed on a sample population\n",
+    "\n",
+    "Given that we have been able to demonstrate the testing and validation of results using various methods, we can now be confident that the calculations obtained are correct. For the simulation we will perform a *STDEV.P* calculation on a **sample population** of data and compare it to the actual results of the *STDEV.S* calculation.\n",
+    "\n",
+    "Technically this is the incorrect application of the *STDEV.P* formula. However, this is being done for the purpose of demonstrating that STDEV.S is a more accurate estimate in this situation. As before we will use numpy.std() as the baseline and validate the results with our own formula."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample :  [20, 2, 7]\n",
+      "std of sample :  7.586537784494028\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python Program illustrating STDEV.P on a sample\n",
+    "# using numpy.std() method  \n",
+    "\n",
     "# Remove the last 2 index from the arry, so it is a sample population of 3/5\n",
-    "# 1D array  \n",
-    "arr = [20, 2, 7] \n",
-    "np.sqrt(np.sum((arr - np.mean(arr))**2)/len(arr) - 1)"
+    "sample = [20, 2, 7] \n",
+    "\n",
+    "## get std dev  \n",
+    "print(\"sample : \", sample)  \n",
+    "print(\"std of sample : \", np.std(sample)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample :  [20, 2, 7]\n",
+      "std of sample :  7.586537784494028\n"
+     ]
+    }
+   ],
+   "source": [
+    "# formula implementation STDEV.P on a sample\n",
+    "# Remove the last 2 index from the arry, so it is a sample population of 3/5 \n",
+    "sample = [20, 2, 7] \n",
+    "\n",
+    "## get std dev\n",
+    "print(\"sample : \", sample)\n",
+    "print(\"std of sample : \", np.sqrt(np.sum((sample - np.mean(sample))**2)/len(sample)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observation\n",
+    "Using the the *STDEV.P* calculation on a sample of population data we were yeiled with the result of 7.586537784494028, which is incorrect based on the previous tests we performed on the same data set. The results can be summerisied as follows;\n",
+    "\n",
+    "Population : [20, 2, 7, 1, 34].\n",
+    "\n",
+    "Sample : [20, 2, 7].\n",
+    "\n",
+    "Actual STDEV.P = 12.576167937809991\n",
+    "\n",
+    "Actual STDEV.S = 9.291573243177568\n",
+    "\n",
+    "Incorrect STDEV.P = 7.586537784494028 (Using STDEV.P on a sample)\n",
+    "\n",
+    "#### Calculate the difference between the actual STDEV.S result and the incorrect STDEV.P result\n",
+    "Percent Difference = (v1 - v2) / ((v1 + v2) / 2) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage Difference:  20.20410288672875\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the difference between v1 and v2\n",
+    "v1 = 9.291573243177568\n",
+    "v2 = 7.586537784494028\n",
+    "\n",
+    "dif = ((v1 - v2) / ((v1 + v2) / 2)) * 100\n",
+    "print(\"Percentage Difference: \", dif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Using various methods of testing and validation of our baseline data. Then by simulating the incorrect use of *STDEV.P* we have been able to establish that *STDEV.S* is a more accurate estimate for the standard deviation of a population when performed on a sample.\n",
+    "\n",
+    "On the small sample of data that we provided during the test, the difference between the results was just over 20%. While this percentage may differ based of the size and variance of the sample population data used for the calculations. It still shows that there is a significiant difference between using STDEV.S and STDEV.P on a sample population."
    ]
   }
  ],
