cleaned up the conclusion and expanded upon the results

--- a/standard-deviation-excel.ipynb
+++ b/standard-deviation-excel.ipynb
@@ -229,7 +229,7 @@
    "metadata": {},
    "source": [
     "## Observation\n",
-    "Using the the *STDEV.P* calculation on a sample of population data we were yeiled with the result of 7.586537784494028, which is incorrect based on the previous tests we performed on the same data set. The results can be summerisied as follows;\n",
+    "Using the the *STDEV.P* calculation on a sample of population data we were yeiled with the result of 7.586537784494028, which is incorrect based on the previous tests we performed on the same data. Furthermore, the variance between the incorrect application od *STDEV.P* on a sample and the actual *STDEV.P* on a population, was greater than the correct application STDEV.S when used on a sample of population data. The results can be summerised below:\n",
     "\n",
     "Population : [20, 2, 7, 1, 34].\n",
     "\n",
@@ -241,7 +241,7 @@
     "\n",
     "Incorrect STDEV.P = 7.586537784494028 (Using STDEV.P on a sample)\n",
     "\n",
-    "#### Calculate the difference between the actual STDEV.S result and the incorrect STDEV.P result\n",
+    "#### Calculate the difference between the results\n",
     "Percent Difference = (v1 - v2) / ((v1 + v2) / 2) * 100"
    ]
   },
@@ -254,17 +254,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage Difference:  20.20410288672875\n"
+      "Actual Percentage Difference:  30.040548472268767\n"
      ]
     }
    ],
    "source": [
-    "# calculate the difference between v1 and v2\n",
-    "v1 = 9.291573243177568\n",
+    "# calculate the difference between Actual STDEV.P and Actual STDEV.S\n",
+    "v1 = 12.576167937809991\n",
+    "v2 = 9.291573243177568\n",
+    "\n",
+    "dif = ((v1 - v2) / ((v1 + v2) / 2)) * 100\n",
+    "print(\"Actual Percentage Difference: \", dif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect Percentage Difference:  49.49365647683313\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the difference between Actual STDEV.P and Incorrect STDEV.P\n",
+    "v1 = 12.576167937809991\n",
     "v2 = 7.586537784494028\n",
     "\n",
     "dif = ((v1 - v2) / ((v1 + v2) / 2)) * 100\n",
-    "print(\"Percentage Difference: \", dif)"
+    "print(\"Incorrect Percentage Difference: \", dif)"
    ]
   },
   {
@@ -272,9 +294,11 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Using various methods of testing and validation of our baseline data. Then by simulating the incorrect use of *STDEV.P* we have been able to establish that *STDEV.S* is a more accurate estimate for the standard deviation of a population when performed on a sample.\n",
+    "On the small sample of data that we provided during the tests, the correct application of STDEV.S on a sample was within approx 30% of the actual STDEV.P results from the full population.\n",
     "\n",
-    "On the small sample of data that we provided during the test, the difference between the results was just over 20%. While this percentage may differ based of the size and variance of the sample population data used for the calculations. It still shows that there is a significiant difference between using STDEV.S and STDEV.P on a sample population."
+    "However, the incorrect application of *STDEV.P* on a sample was out by approx 49.5% compared to the actual *STDEV.P* results from the full population.\n",
+    "\n",
+    "Using various methods of testing and validation of our baseline data. Then by simulating the incorrect use of *STDEV.P* we have been able to establish that *STDEV.S* is a more accurate estimate for the standard deviation of a population when performed on a sample."
    ]
   }
  ],
