cleaned up task3 conclusion, added 4d and 3d graphs to task4

--- a/standard-deviation-excel.ipynb
+++ b/standard-deviation-excel.ipynb
@@ -62,18 +62,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pop :  [20, 2, 7, 1, 34]\n",
-      "std of pop :  12.576167937809991\n"
+      "pop :  [6, 7, 14, 18, 21, 22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75, 81, 82, 83, 84, 97]\n",
+      "std of pop :  25.181915909812915\n"
      ]
     }
    ],
    "source": [
+    "# import numpy arrays\n",
+    "import numpy as np\n",
+    "\n",
     "# Python Program illustrating STDEV.P\n",
     "# using numpy.std() method  \n",
-    "import numpy as np\n",
     "    \n",
-    "# population array  \n",
-    "pop = [20, 2, 7, 1, 34] \n",
+    "# population array n=30\n",
+    "pop = [6, 7, 14, 18, 21, 22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75, 81, 82, 83, 84, 97]\n",
     "\n",
     "## get std dev  \n",
     "print(\"pop : \", pop)  \n",
@@ -89,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample :  [20, 2, 7]\n",
-      "std of sample :  9.291573243177568\n"
+      "sample :  [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75]\n",
+      "std of sample :  17.22750249180836\n"
      ]
     }
    ],
@@ -98,8 +100,8 @@
     "# Python Program illustrating STDEV.S\n",
     "# numpy.std() method  \n",
     "\n",
-    "# Remove the last 2 index from the array, so it is a sample population of 3/5 \n",
-    "sample = [20, 2, 7] \n",
+    "# Sample array n=20. Remove 5 from the front and 5 from the back (The 20 values in the middle) \n",
+    "sample = [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75]\n",
     "\n",
     "## get std dev\n",
     "print(\"sample : \", sample)  \n",
@@ -124,17 +126,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pop :  [20, 2, 7, 1, 34]\n",
-      "std of pop :  12.576167937809991\n"
+      "pop :  [6, 7, 14, 18, 21, 22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75, 81, 82, 83, 84, 97]\n",
+      "std of pop :  25.181915909812915\n"
      ]
     }
    ],
    "source": [
     "# formula implementation STDEV.P\n",
     "# population array\n",
-    "pop = [20, 2, 7, 1, 34] \n",
     "\n",
-    "## get std dev\n",
+    "## std dev of pop\n",
     "print(\"pop : \", pop)\n",
     "print(\"std of pop : \", np.sqrt(np.sum((pop - np.mean(pop))**2)/len(pop)))"
    ]
@@ -148,15 +149,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample :  [20, 2, 7]\n",
-      "std of sample :  9.291573243177568\n"
+      "sample :  [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75]\n",
+      "std of sample :  17.22750249180836\n"
      ]
     }
    ],
    "source": [
     "# formula implementation STDEV.S\n",
-    "# Remove the last 2 index from the arry, so it is a sample population of 3/5 \n",
-    "sample = [20, 2, 7] \n",
+    "# sample array\n",
     "\n",
     "## get std dev\n",
     "print(\"sample : \", sample)\n",
@@ -167,11 +167,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Observation\n",
+    "Using the numpy **np.std()** method and our own formula **np.sqrt(np.sum((x - np.mean(x))^2)/len(x))** we have yielded the same results for both *STDEV.P* and *STDEV.S*. Therefore we can now be confident that our baseline results are accurate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulation to prove STDEV.S is a better estimate for the standard deviation when performed on a sample population\n",
     "\n",
     "Given that we have been able to demonstrate the testing and validation of results using various methods, we can now be confident that the calculations obtained are correct. For the simulation we will perform a *STDEV.P* calculation on a **sample population** of data and compare it to the actual results of the *STDEV.S* calculation.\n",
     "\n",
-    "Technically this is the incorrect application of the *STDEV.P* formula. However, this is being done for the purpose of demonstrating that STDEV.S is a more accurate estimate in this situation. As before we will use numpy.std() as the baseline and validate the results with our own formula."
+    "Technically this is the **incorrect** application of the *STDEV.P* formula. However, this is being done for the purpose of demonstrating that STDEV.S is a more accurate estimate in this situation. As before we will use numpy.std() as the baseline and validate the results with our own formula."
    ]
   },
   {
@@ -183,21 +191,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample :  [20, 2, 7]\n",
-      "std of sample :  7.586537784494028\n"
+      "sample :  [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75]\n",
+      "std of sample :  16.791292386234005\n"
      ]
     }
    ],
    "source": [
     "# Python Program illustrating STDEV.P on a sample\n",
     "# using numpy.std() method  \n",
-    "\n",
-    "# Remove the last 2 index from the arry, so it is a sample population of 3/5\n",
-    "sample = [20, 2, 7] \n",
-    "\n",
-    "## get std dev  \n",
-    "print(\"sample : \", sample)  \n",
-    "print(\"std of sample : \", np.std(sample)) "
+    "print(\"sample : \", sample)\n",
+    "print(\"std of sample : \", np.std(sample))"
    ]
   },
   {
@@ -209,17 +212,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample :  [20, 2, 7]\n",
-      "std of sample :  7.586537784494028\n"
+      "sample :  [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75]\n",
+      "std of sample :  16.791292386234005\n"
      ]
     }
    ],
    "source": [
     "# formula implementation STDEV.P on a sample\n",
-    "# Remove the last 2 index from the arry, so it is a sample population of 3/5 \n",
-    "sample = [20, 2, 7] \n",
-    "\n",
-    "## get std dev\n",
     "print(\"sample : \", sample)\n",
     "print(\"std of sample : \", np.sqrt(np.sum((sample - np.mean(sample))**2)/len(sample)))"
    ]
@@ -229,17 +228,17 @@
    "metadata": {},
    "source": [
     "## Observation\n",
-    "Using the the *STDEV.P* calculation on a sample of population data we were yeiled with the result of 7.586537784494028, which is incorrect based on the previous tests we performed on the same data. Furthermore, the variance between the incorrect application od *STDEV.P* on a sample and the actual *STDEV.P* on a population, was greater than the correct application STDEV.S when used on a sample of population data. The results can be summerised below:\n",
+    "Using the the *STDEV.P* calculation on a sample of population data we were yeiled with the result of **16.791292386234005**, which is incorrect based on the previous tests we performed on the same data. Furthermore, the variance between the incorrect application od *STDEV.P* on a sample and the actual *STDEV.P* on a population, was greater than the correct application STDEV.S when used on a sample of population data. The results can be summerised below:\n",
     "\n",
-    "Population : [20, 2, 7, 1, 34].\n",
+    "Population : [6, 7, 14, 18, 21, 22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75, 81, 82, 83, 84, 97].\n",
     "\n",
-    "Sample : [20, 2, 7].\n",
+    "Sample : [22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75].\n",
     "\n",
-    "Actual STDEV.P = 12.576167937809991\n",
+    "Actual STDEV.P = 25.181915909812915\n",
     "\n",
-    "Actual STDEV.S = 9.291573243177568\n",
+    "Actual STDEV.S = 17.22750249180836\n",
     "\n",
-    "Incorrect STDEV.P = 7.586537784494028 (Using STDEV.P on a sample)\n",
+    "Incorrect STDEV.P = 16.791292386234005 (Using STDEV.P on a sample)\n",
     "\n",
     "#### Calculate the difference between the results\n",
     "Percent Difference = (v1 - v2) / ((v1 + v2) / 2) * 100"
@@ -254,15 +253,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual Percentage Difference:  30.040548472268767\n"
+      "Actual Percentage Difference:  37.51248528180932\n"
      ]
     }
    ],
    "source": [
     "# calculate the difference between Actual STDEV.P and Actual STDEV.S\n",
-    "v1 = 12.576167937809991\n",
-    "v2 = 9.291573243177568\n",
-    "\n",
+    "v1 = np.std(pop)\n",
+    "v2 = np.std(sample, ddof=1)\n",
     "dif = ((v1 - v2) / ((v1 + v2) / 2)) * 100\n",
     "print(\"Actual Percentage Difference: \", dif)"
    ]
@@ -276,15 +274,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Incorrect Percentage Difference:  49.49365647683313\n"
+      "Incorrect Percentage Difference:  39.980853807494846\n"
      ]
     }
    ],
    "source": [
     "# calculate the difference between Actual STDEV.P and Incorrect STDEV.P\n",
-    "v1 = 12.576167937809991\n",
-    "v2 = 7.586537784494028\n",
-    "\n",
+    "v1 = np.std(pop)\n",
+    "v2 = np.std(sample)\n",
     "dif = ((v1 - v2) / ((v1 + v2) / 2)) * 100\n",
     "print(\"Incorrect Percentage Difference: \", dif)"
    ]
@@ -294,11 +291,17 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "On the small sample of data that we provided during the tests, the correct application of STDEV.S on a sample was within approx 30% of the actual STDEV.P results from the full population.\n",
+    "On the small sample of data that we provided during the tests, the correct application of STDEV.S on a sample was within approx **37.51%** of the actual STDEV.P results from the full population.\n",
     "\n",
-    "However, the incorrect application of *STDEV.P* on a sample was out by approx 49.5% compared to the actual *STDEV.P* results from the full population.\n",
+    "However, the incorrect application of *STDEV.P* on a sample was out by approx **39.98%** compared to the actual *STDEV.P* results from the full population.\n",
     "\n",
-    "Using various methods of testing and validation of our baseline data. Then by simulating the incorrect use of *STDEV.P* we have been able to establish that *STDEV.S* is a more accurate estimate for the standard deviation of a population when performed on a sample."
+    "This would indicate that on the above simulated example *STDEV.S* was more accurate than *STDEV.P* when used on a sample population by approx **2.47%**. \n",
+    "\n",
+    "Using various methods of testing and validation of our baseline data. Then by simulating the incorrect use of *STDEV.P* we have been able to establish that *STDEV.S* is a more accurate estimate for the standard deviation of a population when performed on a sample.\n",
+    "\n",
+    "It should also be noted that using very small data sets (less than 5 values) with a high amount of variance can yield some results that contradict our findings. This is due to the STDEV.S formula using **n-1** in the calculation of the standard deviation. Over a very small data set with significiant outliers, this can have a large impact on the results[7].\n",
+    "\n",
+    "[7] Reference range determination: the problem of small sample sizes - https://pubmed.ncbi.nlm.nih.gov/1744721/"
    ]
   }
  ],
