combined all 4 tasks on to a single notebook

--- a/square-root-of-two.ipynb
+++ b/square-root-of-two.ipynb
@@ -11,7 +11,7 @@
     "***\n",
     "#### Task: Calculate the square root of 2 to 100 decimal places.\n",
     "***\n",
-    "We can calculate the the square root of a number using Newtons Method [1,2] to find the square root of $z$ of a number $x$, we can iterate using the following formula.\n",
+    "We can calculate the square root of a number using Newtons Method [1,2] to find the square root of $z$ of a number $x$, we can iterate using the following formula.\n",
     "\n",
     "$$ z_{zext} = z - \\frac{z^2 -x} {2z} $$\n",
     "\n",
@@ -34,7 +34,7 @@
     "    z = x / 2\n",
     "    # loop until we are happy with the level of precision\n",
     "    while abs(x - (z * z)) > 0.00000001:\n",
-    "        # calculate a better guess for the square root on the next iteration\n",
+    "        # calculate a better guess for the square root value on the next iteration\n",
     "        z -= (z * z - x) / (2 * z)\n",
     "    # return the (approximate) square root of x\n",
     "    return z\n"
@@ -112,9 +112,9 @@
    "source": [
     "#### Enhancements 1\n",
     "***\n",
-    "Building upon our basic algorithm we must now investigate how to achieve an accurate result to within 100 decimal places. The first milestone, we must overcome is the limitation of how a programming languages typically handle floating point numbers. In most languages floats are typically 32bits in size with a precision of 24bits which equates to 7 decimal places. Doubles are typically 64bits in size with a precession of 53bits which equates to 16 decimal places [3,4]\n",
+    "Building upon our basic algorithm we must now investigate how to achieve an accurate result to within 100 decimal places. The first milestone, we must overcome is the limitation of how a programming languages typically handle floating point numbers. In most languages floats are typically 32-bits in size with a precision of 24-bits which equates to 7 decimal places. Doubles are typically 64-bits in size with a precession of 53-bits which equates to 16 decimal places [3,4]\n",
     "\n",
-    "One approach to this solution could potentially be to try and represent the value as a string. Since a string is essentially a character array with no maximum limit. Its only real limitation on a 64bit operating system would be the amount of random access memory (RAM) that is physically installed on the machine.\n",
+    "One approach to this solution could potentially be to try and represent the value as a string. Since a string is essentially a character array with no maximum limit. Its only real limitation on a 64-bit operating system would be the amount of random access memory (RAM) that is physically installed on the machine.\n",
     "\n",
     "[3] IEEE 754: floating point in modern computers https://en.wikipedia.org/wiki/Floating-point_arithmetic#IEEE_754:_floating_point_in_modern_computers\n",
     "\n",
@@ -145,7 +145,7 @@
    "metadata": {},
    "source": [
     "#### Observation:\n",
-    "It would seem that using a string did infact generate 100 decimal places. However, it appears to have stopped calculating after 53 decimal digits. This would also seem to confirm how floating point numbers are stored on modern computers as binary fractions, as per the referenced python documentation. \n",
+    "It would seem that using a string did generate 100 decimal places. However, it appears to have stopped calculating after 53 decimal digits. This would also seem to confirm how floating point numbers are stored on modern computers as binary fractions, as per the referenced python documentation. \n",
     "\n",
     "\"On most machines today, floats are approximated using a binary fraction with the numerator using the first 53 bits starting with the most significant bit and with the denominator as a power of two. In the case of 1/10, the binary fraction is 3602879701896397 / 2 ** 55 which is close to but not exactly equal to the true value of 1/10.\"\n"
    ]
@@ -156,11 +156,11 @@
    "source": [
     "#### Enhancements 2\n",
     "***\n",
-    "Given the limitations of floating-point numbers and my plan to use a string coming up short. I started to think of other ways to hold large numerical values. The obvious one that can to mind was an integer as this could hold 2^64. Initially I felt that this would be a limitation and that I would probably need to import the math library to unbind this figure. However, I was presently surprised to find that this is a built in feature with the Python3 standard library [5].\n",
+    "Given the limitations of floating-point numbers and my plan to use a string coming up short. I started to think of other ways to hold large numerical values. The obvious one that can to mind was an integer as this could hold 2^64. Initially I felt that this would be a limitation and that I would probably need to import the math library to unbind this figure. However, this is a built in feature with the Python3 standard library [5].\n",
     "\n",
     "I then looked into how to create very large integer values (unbounded) by using the exponentiation operator $**$ and dividing into whole numbers using the floored quotient operator $//$ to avoid returning any floating point numbers [6].\n",
     "\n",
-    "To format my large integer back into a float with 100 decimal places. I first converted the integer into a list, then inserted a decimal place after the first digit. I Then converted the list back into a formatted string and printed the result [7].\n",
+    "To format the large integer back into a float with 100 decimal places. I first converted the integer into a list, then inserted a decimal place after the first digit. I Then converted the list back into a formatted string and printed the result [7].\n",
     "\n",
     "[5] Integers https://docs.python.org/3/whatsnew/3.0.html#integers\n",
     "\n",
