--- a/standard-deviation-excel.ipynb
+++ b/standard-deviation-excel.ipynb
@@ -241,7 +241,7 @@
     "Incorrect STDEV.P = 16.791292386234005 (Using STDEV.P on a sample)\n",
     "\n",
     "#### Calculate the difference between the results\n",
-    "Percent Difference = (v1 - v2) / ((v1 + v2) / 2) * 100"
+    "$ Difference = (v1 - v2) / ((v1 + v2) / 2) * 100 $"
    ]
   },
   {
