removed individual task notebooks from repo

--- a/Task-Assessments.ipynb
+++ b/Task-Assessments.ipynb
@@ -641,7 +641,7 @@
    "metadata": {},
    "source": [
     "#### Observation\n",
-    "Using the the *STDEV.P* calculation on a sample of population data we were yielded with the result of **16.791292386234005**, which is incorrect based on the previous tests we performed on the same data. Furthermore, the variance between the incorrect application od *STDEV.P* on a sample and the actual *STDEV.P* on a population, was greater than the correct application STDEV.S when used on a sample of population data. The results can be summarised below:\n",
+    "Using the the *STDEV.P* calculation on a sample of population data we were yielded with the result of **16.791292386234005**, which is incorrect based on the previous tests we performed on the same data. Furthermore, the variance between the incorrect application of *STDEV.P* on a sample and the actual *STDEV.P* on a population, was greater than the correct application STDEV.S when used on a sample of population data. The results can be summarised below:\n",
     "\n",
     "Population : [6, 7, 14, 18, 21, 22, 23, 25, 29, 31, 36, 38, 40, 43, 48, 53, 54, 60, 61, 62, 64, 65, 67, 73, 75, 81, 82, 83, 84, 97].\n",
     "\n",
@@ -1074,7 +1074,7 @@
     }
    ],
    "source": [
-    "# add three new points and predict cluster\n",
+    "# add three new Iris samples and predict cluster\n",
     "newVals = np.array([[5.7, 3.8, 1.7, 0.3], [5.9, 3, 4.2, 1.5], [6.4, 3.2, 5.3, 2.3]]) \n",
     "\n",
     "# make cluster prediction\n",
@@ -1128,7 +1128,7 @@
     "\n",
     "The prediction model may also run into issues if the sample size is very small and there is a large coefficient of variation between them. Since outliers will have a major impact on small sample sizes, the results will most likely be inaccurate. \n",
     "\n",
-    "Best practice would be to collect a large amount of data from a wide range of sources to remove sample bias. This should then be processed so the correct number of cluster groups can be pre-established. When attempting to predict new samples the data provided should be realistic and consistent. You could randomly generate numbers to make test data, once you did it within certain parameters that reflected actual values.\n",
+    "Best practice would be to collect a large amount of data from a wide range of sources to remove sample bias. This should then be processed so the correct number of cluster groups can be pre-established. When attempting to predict new samples the data provided should be realistic and consistent. You could randomly generate numbers to make test data, once you do it within certain parameters that reflect actual values.\n",
     "\n",
     "#### Task 4 - References\n",
     "\n",
