--- a/Task-Assessments.ipynb
+++ b/Task-Assessments.ipynb
@@ -163,7 +163,7 @@
     "    \"\"\"\n",
     "    A function to calculate the square root of 2 number using large interger values.\n",
     "    \"\"\"\n",
-    "    # exponentiation multiplier (makes large int values)\n",
+    "    # exponential multiplier (makes large int values)\n",
     "    multiplier = 2 * 10 ** 200\n",
     "\n",
     "    # level of precision\n",
@@ -740,7 +740,7 @@
     "## Task 4 \n",
     "This my proposed solution to the given assessment. Using **scikit-learn** to apply **k-means** clustering to\n",
     "**Fisher’s Iris data set**. Explain how the program works and how accurate it might\n",
-    "be. Then explain how your model could be used to make predictions of species of iris.\n",
+    "be. Then explain how your model could be used to make predictions of species of Iris.\n",
     "\n",
     "***\n",
     "\n",
